# SLSsteam

./: .gitignore  CMakeLists.txt  Makefile  README.md  default.nix  flake.nix
helper_scripts/: rebase.py  vindex.py
injector/: CMakeLists.txt  resource.rc  version.h
injector/include/: EnsureCleanup.h  Injector.h  Seh.h  StringUtil.h  UniUtil.h  argh.h
injector/src/: Injector.cpp  Main.cpp  Seh.cpp
pkg/slssteam/: PKGBUILD
pkg/slssteam-git/: PKGBUILD
res/: SLSsteam-native.desktop  SLSsteam.desktop  SLSsteamDescription.blend  logo.blend
src/: config.cpp  config.hpp  globals.hpp  hooks.cpp  hooks.hpp  log.cpp  log.hpp  main.cpp  memhlp.cpp  memhlp.hpp  patterns.hpp  utils.cpp  utils.hpp  vftableinfo.hpp
